tests/snapshots/snapshots__budget_neverthrow_src_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4019 tokens)

_internals/error.ts
     1→import { Result } from '../result'
     3→export interface ErrorConfig {
     4→  withStackTrace: boolean
     5→}
     7→const defaultErrorConfig: ErrorConfig = {
    11→interface NeverThrowError<T, E> {
    12→  data:
    13→    | {
    14→        type: string
    15→        value: T
      →        …
    27→export const createNeverThrowError = <T, E>(
    28→  message: string,
    29→  result: Result<T, E>,
    30→  config: ErrorConfig = defaultErrorConfig,
    31→): NeverThrowError<T, E> => {
    32→  const data = result.isOk()
    33→    ? { type: 'Ok', value: result.value }
    34→    : { type: 'Err', value: result.error }
    35→
    36→  const maybeStack = config.withStackTrace ? new Error().stack : undefined
    37→
    38→  return {
    39→    data,
    40→    message,
    41→    stack: maybeStack,
    42→  }
    43→}

_internals/utils.ts
     1→import { Result, ok, err } from '../result'
     2→import { ResultAsync } from '../result-async'
     5→export type ExtractOkTypes<T extends readonly Result<unknown, unknown>[]> = {
    10→export type ExtractOkAsyncTypes<T extends readonly ResultAsync<unknown, unknown>[]> = {
    15→export type ExtractErrTypes<T extends readonly Result<unknown, unknown>[]> = {
    20→export type ExtractErrAsyncTypes<T extends readonly ResultAsync<unknown, unknown>[]> = {
    24→export type InferOkTypes<R> = R extends Result<infer T, unknown> ? T : never
    25→export type InferErrTypes<R> = R extends Result<unknown, infer E> ? E : never
    27→export type InferAsyncOkTypes<R> = R extends ResultAsync<infer T, unknown> ? T : never
    28→export type InferAsyncErrTypes<R> = R extends ResultAsync<unknown, infer E> ? E : never
    31→ * Short circuits on the FIRST Err value that we find
    33→export const combineResultList = <T, E>(
    34→  resultList: readonly Result<T, E>[],
    35→): Result<readonly T[], E> => {
    36→  let acc = ok([]) as Result<T[], E>
    37→
    38→  for (const result of resultList) {
    39→    if (result.isErr()) {
    40→      acc = err(result.error)
    41→      break
    42→    } else {
    43→      acc.map((list) => list.push(result.value))
    44→    }
    45→  }
    46→  return acc
    47→}
    54→export const combineResultAsyncList = <T, E>(
    55→  asyncResultList: readonly ResultAsync<T, E>[],
    56→): ResultAsync<readonly T[], E> =>
    57→  ResultAsync.fromSafePromise(Promise.all(asyncResultList)).andThen(
    58→    combineResultList,
    59→  ) as ResultAsync<T[], E>
    62→ * Give a list of all the errors we find
    64→export const combineResultListWithAllErrors = <T, E>(
    65→  resultList: readonly Result<T, E>[],
    66→): Result<readonly T[], E[]> => {
    67→  let acc = ok([]) as Result<T[], E[]>
    68→
    69→  for (const result of resultList) {
    70→    if (result.isErr() && acc.isErr()) {
    71→      acc.error.push(result.error)
    72→    } else if (result.isErr() && acc.isOk()) {
    73→      acc = err([result.error])
    74→    } else if (result.isOk() && acc.isOk()) {
    75→      acc.value.push(result.value)
    76→    }
    77→    // do nothing when result.isOk() && acc.isErr()
    78→  }
    79→  return acc
    80→}
    82→export const combineResultAsyncListWithAllErrors = <T, E>(
    83→  asyncResultList: readonly ResultAsync<T, E>[],
    84→): ResultAsync<readonly T[], E[]> =>
    85→  ResultAsync.fromSafePromise(Promise.all(asyncResultList)).andThen(
    86→    combineResultListWithAllErrors,
    87→  ) as ResultAsync<T[], E[]>

result-async.ts
     1→import type { …
    10→import { Err, Ok, Result } from './ …
    11→import { …
    22→export class ResultAsync<T, E> implements PromiseLike<Result<T, E>> {
    23→  private _promise: Promise<Result<T, E>>
    24→
    25→  constructor …
    30→  static fromSafePromise …
    37→  static fromPromise …
    46→  static fromThrowable …
    69→  static combine …
    81→  static combineWithAllErrors …
    89→  map …
   101→  andThrough …
   117→  andTee …
   133→  orTee …
   149→  mapErr …
   169→  andThen …
   190→  orElse …
   202→  match …
   206→  unwrapOr …
   211→   * @deprecated will be removed in 9.0.0.
   212→   *
   213→   * You can use `safeTry` without this method.
   214→   * @example
   215→   * ```typescript
   216→   * safeTry(async function* () {
   217→   *   const okValue = yield* yourResult
   218→   * })
   219→   * ```
   220→   * Emulates Rust's `?` operator in `safeTry`'s body. See also `safeTry`.
   222→  async *safeUnwrap(): AsyncGenerator<Err<never, E>, T> {
   223→    return yield* await this._promise.then((res) => res.safeUnwrap())
   224→  }
   227→  then …
   249→export function okAsync …
   255→export function errAsync …
   259→export const fromPromise = ResultAsync.fromPromise
   260→export const fromSafePromise = ResultAsync.fromSafePromise
   262→export const fromAsyncThrowable = ResultAsync.fromThrowable
   265→export type CombineResultAsyncs<
   266→  T extends readonly ResultAsync<unknown, unknown>[]
   267→> = IsLiteralArray<T> extends 1
   268→  ? TraverseAsync<UnwrapAsync<T>>
   269→  : ResultAsync<ExtractOkAsyncTypes<T>, ExtractErrAsyncTypes<T>[number]>
   272→export type CombineResultsWithAllErrorsArrayAsync<
   273→  T extends readonly ResultAsync<unknown, unknown>[]
   274→> = IsLiteralArray<T> extends 1
   275→  ? TraverseWithAllErrorsAsync<UnwrapAsync<T>>
   276→  : ResultAsync<ExtractOkAsyncTypes<T>, ExtractErrAsyncTypes<T>[number][]>
   279→type UnwrapAsync …
   300→type TraverseAsync …
   330→type TraverseWithAllErrorsAsync …
   338→type Writable …

result.ts
     1→import { errAsync, ResultAsync } from './'
     2→import { createNeverThrowError, ErrorConfig } from './_internals/error'
     3→import {
     4→  combineResultList,
     5→  combineResultListWithAllErrors,
     6→  ExtractErrTypes,
     7→  ExtractOkTypes,
     8→  InferAsyncErrTypes,
     9→  InferErrTypes,
    10→  InferOkTypes,
    11→} from './_internals/utils'
    14→export namespace Result {
    15→  /**
    16→   * Wraps a function with a try catch, creating a new function with the same
    17→   * arguments but returning `Ok` if successful, `Err` if the function throws
    18→   *
    19→   * @param fn function to wrap with ok on success or err on failure
    20→   * @param errorFn when an error is thrown, this will wrap the error result if provided
    21→   */
    22→  // eslint-disable-next-line @typescript-eslint/no-explicit-any
    23→  export function fromThrowable …
    43→  export function combine …
    55→  export function combineWithAllErrors …
    62→export type Result …
    66→export function ok …
    73→export function err …
   122→export function safeTry …
   134→interface IResult<T, E> {
   136→   * Used to check if a `Result` is an `OK`
   137→   *
   138→   * @returns `true` if the result is an `OK` variant of Result
   140→  isOk(): this is Ok<T, E>
   143→   * Used to check if a `Result` is an `Err`
   144→   *
   145→   * @returns `true` if the result is an `Err` variant of Result
   147→  isErr(): this is Err<T, E>
   150→   * Maps a `Result<T, E>` to `Result<U, E>`
   151→   * by applying a function to a contained `Ok` value, leaving an `Err` value
   152→   * untouched.
   153→   *
   154→   * @param f The function to apply an `OK` value
   155→   * @returns the result of applying `f` or an `Err` untouched
   157→  map<A>(f: (t: T) => A): Result<A, E>
   160→   * Maps a `Result<T, E>` to `Result<T, F>` by applying a function to a
   161→   * contained `Err` value, leaving an `Ok` value untouched.
   162→   *
   163→   * This function can be used to pass through a successful result while
   164→   * handling an error.
   165→   *
      →   …
   168→  mapErr<U>(f: (e: E) => U): Result<T, U>
   183→  andThen …
   186→   * This "tee"s the current value to an passed-in computation such as side
   187→   * effect functions but still returns the same current value as the result.
   188→   *
   189→   * This is useful when you want to pass the current result to your side-track
   190→   * work such as logging but want to continue main-track work after that.
   191→   * This method does not care about the result of the passed in computation.
      →   …
   195→  andTee(f: (t: T) => unknown): Result<T, E>
   198→   * This "tee"s the current `Err` value to an passed-in computation such as side
   199→   * effect functions but still returns the same `Err` value as the result.
   200→   *
   201→   * This is useful when you want to pass the current `Err` value to your side-track
   202→   * work such as logging but want to continue error-track work after that.
   203→   * This method does not care about the result of the passed in computation.
      →   …
   207→  orTee(f: (t: E) => unknown): Result<T, E>
   219→  andThrough …
   233→  orElse …
   236→   * Similar to `map` Except you must return a new `Result`.
   237→   *
   238→   * This is useful for when you need to do a subsequent async computation using
   239→   * the inner `T` value, but that computation might fail. Must return a ResultAsync
   240→   *
   241→   * @param f The function that returns a `ResultAsync` to apply to the current
      →   …
   244→  asyncAndThen<U, F>(f: (t: T) => ResultAsync<U, F>): ResultAsync<U, E | F>
   247→   * Maps a `Result<T, E>` to `ResultAsync<U, E>`
   248→   * by applying an async function to a contained `Ok` value, leaving an `Err`
   249→   * value untouched.
   250→   *
   251→   * @param f An async function to apply an `OK` value
   253→  asyncMap<U>(f: (t: T) => Promise<U>): ResultAsync<U, E>
   256→   * Unwrap the `Ok` value, or return the default if there is an `Err`
   257→   *
   258→   * @param v the default value to return if there is an `Err`
   260→  unwrapOr<A>(v: A): T | A
   263→   *
   264→   * Given 2 functions (one for the `Ok` variant and one for the `Err` variant)
   265→   * execute the function that matches the `Result` variant.
   266→   *
   267→   * Match callbacks do not necessitate to return a `Result`, however you can
   268→   * return a `Result` if you want to.
      →   …
   276→  match<A, B = A>(ok: (t: T) => A, err: (e: E) => B): A | B
   279→   * @deprecated will be removed in 9.0.0.
   280→   *
   281→   * You can use `safeTry` without this method.
   282→   * @example
   283→   * ```typescript
   284→   * safeTry(function* () {
      →   …
   290→  safeUnwrap(): Generator<Err<never, E>, T>
   293→   * **This method is unsafe, and should only be used in a test environments**
   294→   *
   295→   * Takes a `Result<T, E>` and returns a `T` when the result is an `Ok`, otherwise it throws a custom object.
   296→   *
   297→   * @param config
   299→  _unsafeUnwrap(config?: ErrorConfig): T
   302→   * **This method is unsafe, and should only be used in a test environments**
   303→   *
   304→   * takes a `Result<T, E>` and returns a `E` when the result is an `Err`,
   305→   * otherwise it throws a custom object.
   306→   *
   307→   * @param config
   309→  _unsafeUnwrapErr(config?: ErrorConfig): E
   312→export class Ok<T, E> implements IResult<T, E> {
   313→  constructor …
   315→  isOk …
   319→  isErr …
   323→  map …
   328→  mapErr …
   337→  andThen …
   344→  andThrough …
   348→  andTee …
   357→  orTee …
   366→  orElse …
   370→  asyncAndThen …
   379→  asyncAndThrough …
   383→  asyncMap …
   388→  unwrapOr …
   393→  match …
   397→  safeUnwrap …
   405→  _unsafeUnwrap(_?: ErrorConfig): T {
   409→  _unsafeUnwrapErr(config?: ErrorConfig): E {
   419→export class Err<T, E> implements IResult<T, E> {
   420→  constructor …
   422→  isOk …
   426→  isErr …
   431→  map …
   435→  mapErr …
   439→  andThrough …
   443→  andTee …
   447→  orTee …
   461→  andThen …
   470→  orElse …
   475→  asyncAndThen …
   479→  asyncAndThrough …
   484→  asyncMap …
   488→  unwrapOr …
   492→  match …
   496→  safeUnwrap …
   505→  _unsafeUnwrap(config?: ErrorConfig): T {
   509→  _unsafeUnwrapErr(_?: ErrorConfig): E {
   523→export const fromThrowable …
   530→type Prev …
   590→type CollectResults …
   614→export type Transpose …
   635→export type Combine …
   645→export type Dedup …
   652→export type MemberListOf …
   669→export type EmptyArrayToNever …
   680→type UnknownMembersToNever …
   685→export type MembersToUnion …
   688→export type IsLiteralArray …
   698→type Traverse …
   704→type TraverseWithAllErrors …
   712→export type CombineResults …
   719→export type CombineResultsWithAllErrorsArray …
