tests/snapshots/snapshots__budget_neverthrow_src_internals_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (450 words)

error.ts
     1→import { Result } from '../result'
     3→export interface ErrorConfig {
     4→  withStackTrace: boolean
     5→}
     7→const defaultErrorConfig: ErrorConfig = {
     8→  withStackTrace: false,
     9→}
    11→interface NeverThrowError<T, E> {
    12→  data:
    13→    | {
    14→        type: string
    15→        value: T
    16→      }
    17→    | {
    18→        type: string
    19→        value: E
    20→      }
    21→  message: string
    22→  stack: string | undefined
    23→}
    27→export const createNeverThrowError = <T, E>(
    28→  message: string,
    29→  result: Result<T, E>,
    30→  config: ErrorConfig = defaultErrorConfig,
    31→): NeverThrowError<T, E> => {
    32→  const data = result.isOk()
    33→    ? { type: 'Ok', value: result.value }
    34→    : { type: 'Err', value: result.error }
    35→
    36→  const maybeStack = config.withStackTrace ? new Error().stack : undefined
    37→
    38→  return {
    39→    data,
    40→    message,
    41→    stack: maybeStack,
    42→  }
    43→}
utils.ts
     1→import { Result, ok, err } from '../result'
     2→import { ResultAsync } from '../result-async'
     5→export type ExtractOkTypes<T extends readonly Result<unknown, unknown>[]> = {
    10→export type ExtractOkAsyncTypes<T extends readonly ResultAsync<unknown, unknown>[]> = {
    15→export type ExtractErrTypes<T extends readonly Result<unknown, unknown>[]> = {
    20→export type ExtractErrAsyncTypes<T extends readonly ResultAsync<unknown, unknown>[]> = {
    24→export type InferOkTypes<R> = R extends Result<infer T, unknown> ? T : never
    25→export type InferErrTypes<R> = R extends Result<unknown, infer E> ? E : never
    27→export type InferAsyncOkTypes<R> = R extends ResultAsync<infer T, unknown> ? T : never
    28→export type InferAsyncErrTypes<R> = R extends ResultAsync<unknown, infer E> ? E : never
    30→/**
    31→ * Short circuits on the FIRST Err value that we find
    32→ */
    33→export const combineResultList = <T, E>(
    34→  resultList: readonly Result<T, E>[],
    35→): Result<readonly T[], E> => {
    36→  let acc = ok([]) as Result<T[], E>
    37→
    38→  for (const result of resultList) {
    39→    if (result.isErr()) {
    40→      acc = err(result.error)
    41→      break
    42→    } else {
    43→      acc.map((list) => list.push(result.value))
    44→    }
    45→  }
    46→  return acc
    47→}
    54→export const combineResultAsyncList = <T, E>(
    55→  asyncResultList: readonly ResultAsync<T, E>[],
    56→): ResultAsync<readonly T[], E> =>
    57→  ResultAsync.fromSafePromise(Promise.all(asyncResultList)).andThen(
    58→    combineResultList,
    59→  ) as ResultAsync<T[], E>
    61→/**
    62→ * Give a list of all the errors we find
    63→ */
    64→export const combineResultListWithAllErrors = <T, E>(
    65→  resultList: readonly Result<T, E>[],
    66→): Result<readonly T[], E[]> => {
    67→  let acc = ok([]) as Result<T[], E[]>
    68→
    69→  for (const result of resultList) {
    70→    if (result.isErr() && acc.isErr()) {
    71→      acc.error.push(result.error)
    72→    } else if (result.isErr() && acc.isOk()) {
    73→      acc = err([result.error])
    74→    } else if (result.isOk() && acc.isOk()) {
    75→      acc.value.push(result.value)
    76→    }
    77→    // do nothing when result.isOk() && acc.isErr()
    78→  }
    79→  return acc
    80→}
    82→export const combineResultAsyncListWithAllErrors = <T, E>(
    83→  asyncResultList: readonly ResultAsync<T, E>[],
    84→): ResultAsync<readonly T[], E[]> =>
    85→  ResultAsync.fromSafePromise(Promise.all(asyncResultList)).andThen(
    86→    combineResultListWithAllErrors,
    87→  ) as ResultAsync<T[], E[]>
